# EP-deployer

./: .gitignore  README.md  pyproject.toml
config/: dev.json  prd.json  tst.json
deployer/: __main__.py  deploy.py
