[build-system]
requires = ["setuptools>=75.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deployer"
dependencies = [
    "requests>=2.32.3",
    "jsonpath-ng>=1.7.0"
]
authors = [{name = "Peter Kester", email = "peter.kester@solace.com"}]
keywords = ["CloudAPI", "Deployments", "CICD"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/peetkes/EP-Deployer.git"
Issues = "https://github.com/peetkes/EP-Deployer/issues"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
deploy = "deployer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "deployer.__version__"}
